--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -3,4 +3,25 @@ defaultPackage: cn.subat.impl
 testFramework: junit
 sourceLanguage: java
 buildTool: gradle
-features: [ annotation-api, app-name, data, data-jpa, gradle, h2, http-client, jackson-databind, java, java-application, jdbc-hikari, junit, logback, micronaut-build, netty-server, rabbitmq, readme, shade, test-resources, yaml ]
+features: [
+  annotation-api,
+  app-name,
+  data,
+  data-jpa,
+  gradle,
+  h2,
+  http-client,
+  jackson-databind,
+  java,
+  java-application,
+  jdbc-hikari,
+  junit,
+  logback,
+  micronaut-build,
+  netty-server,
+  rabbitmq,
+  readme,
+  shade,
+  test-resources,
+  yaml
+]
